Fix an oopsiedaisy in the collapsing grid

--- a/app/src/scss/components/_base.scss
+++ b/app/src/scss/components/_base.scss
@@ -16,7 +16,6 @@ body {
 }
 .container {
     max-width: 80vw;
-    background: gray;
     .col-1 {
         width: 100%;
     }
